--- a/DynamicForm/Views/DynamicForm/Index.cshtml
+++ b/DynamicForm/Views/DynamicForm/Index.cshtml
@@ -36,7 +36,7 @@
                             <div class="x_content">
                                 @if (item.ControlId == (int)Shared.Enum.ControlType.TextBox)
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="@item.Name" class="form-label">@item.Name</label>
                                         @if (item.IsRequired)
                                         {
@@ -50,7 +50,7 @@
                                 }
                                 else if (item.ControlId == (int)Shared.Enum.ControlType.TextArea)
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="@item.Name" class="form-label">@item.Name</label>
                                         @if (item.IsRequired)
                                         {
@@ -66,7 +66,7 @@
                                 {
                                     @if (item.IsRequired)
                                     {
-                                        <div class="col-span-12 sm:col-span-12">
+                                        <div class="form-group col-span-12 sm:col-span-12">
                                             <label for="selection" class="form-label">@item.Name</label>
                                             <select id="selection" class="form-control" style="width:40%" name="@item.Name" required>
                                                 @foreach (SelectListItem option in ViewBag.TemplateFieldOptions)
@@ -78,7 +78,7 @@
                                     }
                                     else
                                     {
-                                        <div class="col-span-12 sm:col-span-12">
+                                        <div class="form-group col-span-12 sm:col-span-12">
                                             <label for="selection" class="form-label">@item.Name</label>
                                             <select id="selection" class="form-control" style="width:40%" name="@item.Name">
                                                 @foreach (SelectListItem option in ViewBag.TemplateFieldOptions)
@@ -93,7 +93,7 @@
                                 {
                                     @if (item.IsRequired)
                                     {
-                                        <div class="custom-control custom-checkbox d-flex flex-row align-items-center">
+                                        <div class="form-group custom-control custom-checkbox d-flex flex-row align-items-center">
                                             <label for="@item.Name" class="form-label col-span-6 sm:col-span-6">@item.Name</label>
                                             <input name="@item.Name" type="checkbox" id="@item.Name" required />
                                         </div>
@@ -101,7 +101,7 @@
                                     }
                                     else
                                     {
-                                        <div class="custom-control custom-checkbox col-span-6 sm:col-span-6">
+                                        <div class="form-group custom-control custom-checkbox col-span-6 sm:col-span-6">
                                             <label for="@item.Name" class="form-label">@item.Name</label>
                                             <input name="@item.Name" type="checkbox" id="@item.Name" required />
                                         </div>
@@ -111,7 +111,7 @@
                                 {
                                 @if (item.IsRequired)
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="selection" class="form-label">@item.Name</label>
                                         <br />
                                         @foreach (SelectListItem option in ViewBag.CheckBoxListOptions)
@@ -133,7 +133,7 @@
                                 }
                                 else
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="selection" class="form-label">@item.Name</label>
                                         <br />
                                         @foreach (SelectListItem option in ViewBag.CheckBoxListOptions)
@@ -157,7 +157,7 @@
                                 {
                                 @if (item.IsRequired)
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="selection" class="form-label">@item.Name</label>
                                         <br />
                                         @foreach (SelectListItem option in ViewBag.RadioButtonsOptions)
@@ -178,7 +178,7 @@
                                 }
                                 else
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="selection" class="form-label">@item.Name</label>
                                         <br />
                                         @foreach (SelectListItem option in ViewBag.RadioButtonsOptions)
@@ -202,14 +202,14 @@
                                 {
                                 @if (item.IsRequired)
                                 {
-                                    <div class="custom-file-input">
+                                    <div class="form-group custom-file-input">
                                             <label for="@item.Name" class="form-label">@item.Name</label>
                                         <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:40%" required>
                                     </div>
                                 }
                                 else
                                 {
-                                    <div class="custom-file-input">
+                                    <div class="form-group custom-file-input">
                                             <label for="@item.Name" class="form-label">@item.Name</label>
                                         <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:40%">
                                     </div>
@@ -219,14 +219,14 @@
                                 {
                                 @if (item.IsRequired)
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="@item.Name" class="form-label">@item.Name</label>
                                         <input name="@item.Name" type="date" id="datepicker" class="form-control" style="width:20%" required>
                                     </div>
                                 }
                                 else
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="@item.Name" class="form-label">@item.Name</label>
                                         <input name="@item.Name" type="date" id="datepicker" class="form-control" style="width:20%">
                                     </div>
@@ -236,14 +236,14 @@
                                 {
                                 @if (item.IsRequired)
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="@item.Name" class="form-label">@item.Name</label>
                                         <input name="@item.Name" type="time" id="timepicker" class="form-control" style="width:20%" required>
                                     </div>
                                 }
                                 else
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="@item.Name" class="form-label">@item.Name</label>
                                         <input name="@item.Name" type="time" id="timepicker" class="form-control" style="width:20%">
                                     </div>
@@ -253,14 +253,14 @@
                                 {
                                 @if (item.IsRequired)
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="@item.Name" class="form-label">@item.Name</label>
                                         <input name="@item.Name" type="datetime-local" id="datetimepicker" class="form-control" style="width:20%" required>
                                     </div>
                                 }
                                 else
                                 {
-                                    <div class="col-span-12 sm:col-span-6">
+                                    <div class="form-group col-span-12 sm:col-span-6">
                                         <label for="@item.Name" class="form-label">@item.Name</label>
                                         <input name="@item.Name" type="datetime-local" id="datetimepicker" class="form-control" style="width:20%">
                                     </div>
@@ -270,14 +270,14 @@
                                 {
                                     @if (item.IsRequired) 
                                     {
-                                        <div class="col-span-12 sm:col-span-6">
+                                        <div class="form-group col-span-12 sm:col-span-6">
                                             <label for="@item.Name" class="form-label">@item.Name</label>
                                             <input name="@item.Name" type="tel" id="Phone" class="form-control" style="width:20%" pattern="[0-9]{10}" required>
                                         </div>
                                     }
                                     else
                                     {
-                                        <div class="col-span-12 sm:col-span-6">
+                                        <div class="form-group col-span-12 sm:col-span-6">
                                             <label for="@item.Name" class="form-label">@item.Name</label>
                                             <input name="@item.Name" type="tel" id="Phone" class="form-control" style="width:20%" pattern="[0-9]{10}">
                                         </div>
@@ -287,14 +287,14 @@
                                 {
                                     @if (item.IsRequired)
                                     {
-                                        <div class="col-span-12 sm:col-span-6">
+                                        <div class="form-group col-span-12 sm:col-span-6">
                                             <label for="@item.Name" class="form-label">@item.Name</label>
                                             <input name="@item.Name" type="email" id="Email" class="form-control" style="width:20%" required>
                                         </div>
                                     }
                                     else
                                     {
-                                        <div class="col-span-12 sm:col-span-6">
+                                        <div class="form-group col-span-12 sm:col-span-6">
                                             <label for="@item.Name" class="form-label">@item.Name</label>
                                             <input name="@item.Name" type="email" id="Email" class="form-control" style="width:20%">
                                         </div>
